Clear button is  now functional, fixed css transitions on search bar now work in Webkit browsers, fixed backspace in search bar for Chrome, Safari and IE, nicely aligned search box and notifications/settings buttons with content width.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -64,14 +64,14 @@ a
 
 #content
 {
-	margin: auto;
 	width: 1000px;
+	margin: auto;
 }
 #bar-inner
 {
-	display: inline;
-	/*margin: auto;*/
 	width: 1000px;
+	margin: auto;
+	margin-top: -30px;
 }
 
 /* why does this not already exist in bootstrap? oh well */
@@ -88,14 +88,27 @@ a
 
 #global-search-box::-moz-placeholder
 {
-	transition: color 800ms;
+	font-style: italic;
 	color: transparent;
+	transition: color 200ms;
 }
 #global-search-box:focus::-moz-placeholder
 {
 	font-style: italic;
 	color: #626262;
-	transition: color 800ms;
+	transition: color 200ms;
+}
+#global-search-box::-webkit-input-placeholder
+{
+	font-style: italic;
+	color: transparent;
+	transition: color 200ms;
+}
+#global-search-box:focus::-webkit-input-placeholder
+{
+	font-style: italic;
+	color: #626262;
+	transition: color 200ms;
 }
 
 #global-search-box
@@ -205,7 +218,7 @@ force the little up-arrow thing to appear on dropdowns
 {
 	background-image: none;
 	background-color: lightsteelblue;
-	
+
 	/*background: #D4F0FC;
 	color: black;*/
 }
